# Spotlight

./: CMakeLists.txt  Doxyfile  README.md  cards.json
assets/: cards.json
config/: settings.txt
docs/doxygen/html/: _board_8cpp.html  _board_8hpp.html  _board_8hpp__dep__incl.dot  _board_8hpp__incl.dot  _board_8hpp_source.html  _card_8cpp.html  _card_8hpp.html  _card_8hpp__dep__incl.dot  _card_8hpp__incl.dot  _card_8hpp_source.html  _colors_8cpp.html  _colors_8hpp.html  _colors_8hpp.js  _colors_8hpp__incl.dot  _colors_8hpp_source.html  _command_console_8cpp.html  _command_console_8hpp.html  _command_console_8hpp.js  _command_console_8hpp__incl.dot  _command_console_8hpp_source.html  _company_8cpp.html  _company_8hpp.html  _company_8hpp.js  _company_8hpp__dep__incl.dot  _company_8hpp__incl.dot  _company_8hpp_source.html  _cube_coord_8cpp.html  _cube_coord_8hpp.html  _cube_coord_8hpp.js  _cube_coord_8hpp__dep__incl.dot  _cube_coord_8hpp__incl.dot  _cube_coord_8hpp_source.html  _deck_8cpp.html  _deck_8hpp.html  _deck_8hpp.js  _deck_8hpp__dep__incl.dot  _deck_8hpp__incl.dot  _deck_8hpp_source.html  _form0_dark_tmp.ps  _form0_tmp.ps  (+268 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_14.js  all_15.js  all_16.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_11.js  functions_12.js  functions_13.js  functions_16.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+24 more)
docs/doxygen/latex/: _board_8cpp.tex  _board_8hpp.tex  _board_8hpp__dep__incl.dot  _board_8hpp__incl.dot  _board_8hpp_source.tex  _card_8cpp.tex  _card_8hpp.tex  _card_8hpp__dep__incl.dot  _card_8hpp__incl.dot  _card_8hpp_source.tex  _colors_8cpp.tex  _colors_8hpp.tex  _colors_8hpp__incl.dot  _colors_8hpp_source.tex  _command_console_8cpp.tex  _command_console_8hpp.tex  _command_console_8hpp__incl.dot  _command_console_8hpp_source.tex  _company_8cpp.tex  _company_8hpp.tex  _company_8hpp__dep__incl.dot  _company_8hpp__incl.dot  _company_8hpp_source.tex  _cube_coord_8cpp.tex  _cube_coord_8hpp.tex  _cube_coord_8hpp__dep__incl.dot  _cube_coord_8hpp__incl.dot  _cube_coord_8hpp_source.tex  _deck_8cpp.tex  _deck_8hpp.tex  _deck_8hpp__dep__incl.dot  _deck_8hpp__incl.dot  _deck_8hpp_source.tex  _game_8cpp.tex  _game_8hpp.tex  _game_8hpp__incl.dot  _game_8hpp_source.tex  _path_utils_8cpp.tex  _path_utils_8hpp.tex  _path_utils_8hpp__incl.dot  (+173 more)
docs/doxygen/man/man3/: Board.3  Board.cpp.3  Board.hpp.3  C__Users_Chils_OneDrive_Documents_Dreamweaver_include_.3  C__Users_Chils_OneDrive_Documents_Dreamweaver_src_.3  Card.3  Card.cpp.3  Card.hpp.3  Colors.3  Colors.cpp.3  Colors.hpp.3  CommandConsole.3  CommandConsole.cpp.3  CommandConsole.hpp.3  Company.3  Company.cpp.3  Company.hpp.3  CubeCoord.3  CubeCoord.cpp.3  CubeCoord.hpp.3  CubeCoordHash.3  Deck.3  Deck.cpp.3  Deck.hpp.3  Game.3  Game.cpp.3  Game.hpp.3  GameConfig.3  PathUtils.3  PathUtils.cpp.3  PathUtils.hpp.3  Player.3  Player.cpp.3  Player.hpp.3  Renderer.3  Renderer.cpp.3  Renderer.hpp.3  StartupMenu.3  StartupMenu.cpp.3  StartupMenu.hpp.3  (+4 more)
include/: Board.hpp  Card.hpp  Colors.hpp  CommandConsole.hpp  Company.hpp  CubeCoord.hpp  Deck.hpp  Game.hpp  PathUtils.hpp  Player.hpp  Renderer.hpp  StartupMenu.hpp  Tile.hpp
src/: Board.cpp  Card.cpp  Colors.cpp  CommandConsole.cpp  Company.cpp  CubeCoord.cpp  Deck.cpp  Game.cpp  PathUtils.cpp  Player.cpp  Renderer.cpp  StartupMenu.cpp  Tile.cpp  main.cpp
